# agent-state

./: conversation_memeory.json  conversation_memory.json  knowledge.json  main.py  pyproject.toml  user_123_state.json
.agent/skills/sample-skill/: SKILL.md
.zed/: settings.json
AgentWSkills/: get_skills.py
Environment/: perception_action.py  perception_action_cycle.py  simple_env.py
Memory/: agent_with_memory.py  llm.py  long_term.py  ltm_agent_prompt.md  make_file.py  short_term.py
State/: state.py  types_states.py
Testing/: agent_tester.py
multi_agent/: README.md  agent.py  state.py
multi_agent/exp/: experiment.ipynb
