[project]
name = "agent-state"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "headroom-ai[all]>=0.26.0",
    "langchain-openai>=1.3.0",
    "langgraph>=1.2.5",
    "langwatch>=0.26.0",
    "langwatch-scenario>=0.7.26",
    "numpy>=2.4.6",
    "openai>=2.41.1",
    "sentence-transformers>=5.6.0",
]
